<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, StompBot!</string>
    <string name="app_name">StompBot</string>
    <string name="description_logo">StompBot Digital Effects Pedal</string>
    <string name="description_home">Home</string>
	<string name="description_refresh">Refresh</string>
	<string name="description_settings">Settings</string>
	<string name="description_knobs">IO</string>
	<string name="dashboard_action">Action</string>
	<string name="dashboard_led">LED</string>
	<string name="dashboard_spst">Switch</string>
	<string name="dashboard_knob">Knob</string>
	<string name="pure_data_connection">Connecting to PureData...</string>
</resources>
