<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright 2010 Google Inc. Licensed under the Apache License, Version
		2.0 (the "License"); you may not use this file except in compliance
		with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#ffffff">

	<LinearLayout style="@style/TitleBar" android:gravity="center_vertical">
			<ImageButton style="@style/TitleBarAction" android:id="@+id/title_home_icon"
			android:contentDescription="@string/description_home" android:src="@drawable/ic_title_home_alt"
			android:onClick="onHomeButtonClick" 
			android:background="#ffffff" />
		<ImageButton style="@style/TitleBarAction" android:id="@+id/title_knob_icon"
			android:contentDescription="@string/description_knobs" android:src="@drawable/ic_menu_settings"
			android:onClick="onKnobButtonClick" />
		<ImageView style="@style/TitleBarSeparator" />


		<View style="@style/TitleBarSpring" />

		<ImageView style="@style/TitleBarSeparator" />
		<ImageButton style="@style/TitleBarAction" android:id="@+id/btn_title_refresh"
			android:contentDescription="@string/description_refresh" android:src="@drawable/ic_title_refresh"
			android:onClick="onRefreshButtonClick" />
		<ImageView style="@style/TitleBarSeparator" />
		<ImageButton style="@style/TitleBarAction" android:id="@+id/btn_title_refresh"
			android:src="@drawable/ic_menu_equalizer" android:onClick="onSettingsButtonClick" />

		<ProgressBar style="@style/TitleBarProgressIndicator"
			android:id="@+id/title_refresh_progress" android:visibility="gone" />

	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="fill_parent"
		android:layout_weight="1" android:padding="0dip" android:id="@+id/knob_view"
		android:visibility="gone">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/led_one_button" style="@style/HomeButton"
				android:onClick="onLEDOneClick" android:text="@string/dashboard_led"
				android:drawableTop="@drawable/ledoff" />
			<Button android:id="@+id/led_two_button" style="@style/HomeButton"
				android:onClick="onLEDTwoClick" android:text="@string/dashboard_led"
				android:drawableTop="@drawable/ledoff" />
			<Button android:id="@+id/led_three_button" style="@style/HomeButton"
				android:onClick="onLEDThreeClick" android:text="@string/dashboard_led"
				android:drawableTop="@drawable/ledoff" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">

			<Button android:id="@+id/knob_one_button" style="@style/HomeButton"
				android:onClick="onKnobOneClick" android:text="@string/dashboard_knob"
				android:drawableTop="@drawable/knoboff" />
			<Button android:id="@+id/knob_two_button" style="@style/HomeButton"
				android:onClick="onKnobTwoClick" android:text="@string/dashboard_knob"
				android:drawableTop="@drawable/knoboff" />
			<Button android:id="@+id/knob_three_button" style="@style/HomeButton"
				android:onClick="onKnobThreeClick" android:text="@string/dashboard_knob"
				android:drawableTop="@drawable/knoboff" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/switch_one_button" style="@style/HomeButton"
				android:onClick="onSwitchOneClick" android:text="@string/dashboard_spst"
				android:drawableTop="@drawable/spstoff" />
			<Button android:id="@+id/switch_two_button" style="@style/HomeButton"
				android:onClick="onSwitchTwoClick" android:text="@string/dashboard_spst"
				android:drawableTop="@drawable/spstoff" />
			<Button android:id="@+id/switch_three_button" style="@style/HomeButton"
				android:onClick="onSwitchThreeClick" android:text="@string/dashboard_spst"
				android:drawableTop="@drawable/spstoff" />
		</LinearLayout>

	</LinearLayout>
	
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="fill_parent" android:layout_weight="2"
		android:orientation="vertical" android:baselineAligned="false"
		android:background="@android:color/transparent" android:gravity="center_vertical"
		android:id="@+id/order_view">
		<include layout="@layout/inputrow" android:background="@android:color/transparent" />
		<com.youbroughther.stompbot.DragDropListView
			android:id="@+id/drag_drop_list" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:cacheColorHint="#00000000"
			android:background="#333333" android:divider="#333333"
			android:gravity="fill_vertical" android:drawSelectorOnTop="true"
			android:fastScrollEnabled="true" android:clickable="false"
			android:drawingCacheQuality="high" />

	</LinearLayout>

<LinearLayout android:id="@+id/pure_data_connection"
		android:layout_width="fill_parent" android:layout_height="@dimen/pure_data_connection_height"
		android:orientation="horizontal" android:background="#000000"
		android:gravity="left">
		<TextView android:id="@+id/pure_data_text"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:textColor="#ffffff" android:gravity="bottom" android:fadingEdgeLength="6dip"
			android:scrollbars="vertical" android:text="" android:padding="10dip" />
		<LinearLayout android:id="@+id/pure_data_loading"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="horizontal" android:gravity="center"
			android:visibility="gone">
			<ProgressBar style="?android:attr/progressBarStyleSmall"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:paddingRight="6dip" android:indeterminate="true" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#ffffff"
				android:textSize="@dimen/text_size_small" android:text="@string/pure_data_connection" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
